--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@fontsource-variable/open-sans": "^5.2.5",
         "@heroui/react": "^2.7.6-beta.2",
         "clsx": "^2.1.1",
+        "embla-carousel": "^8.5.2",
+        "embla-carousel-react": "^8.5.2",
         "framer-motion": "^12.6.2",
         "lucide-react": "^0.486.0",
         "next": "15.2.4",
