Update trending component, and refactor header component and some small adjustments

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
         "paths": {
             "@/app/*": ["src/app/*"],
             "@/components/*": ["src/components/*"],
+            "@/ui/*": ["src/components/ui/*"],
             "@/styles/*": ["src/styles/*"],
             "@/utils/*": ["src/utils/*"]
         }
