--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "swr": "^2.3.3",
+        "tailwind-container-break-out": "^2.0.9",
         "tailwind-merge": "^3.1.0"
     },
     "devDependencies": {
