--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "dependencies": {
         "@fontsource-variable/open-sans": "^5.2.5",
         "@heroui/react": "^2.7.6-beta.2",
+        "axios": "^1.8.4",
         "clsx": "^2.1.1",
+        "country-code-lookup": "^0.1.3",
+        "embla-carousel": "^8.5.2",
+        "embla-carousel-react": "^8.5.2",
         "framer-motion": "^12.6.2",
         "lucide-react": "^0.486.0",
         "next": "15.2.4",
         "next-themes": "^0.4.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "tailwind-merge": "^3.1.0"
+        "swr": "^2.3.3",
+        "tailwind-merge": "^3.1.0",
+        "zod": "^3.24.2",
+        "zod-to-json-schema": "^3.24.5"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
