--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@fontsource-variable/open-sans": "^5.2.5",
         "@heroui/react": "^2.7.6-beta.2",
+        "@hookform/resolvers": "^5.0.1",
         "axios": "^1.8.4",
         "clsx": "^2.1.1",
         "country-code-lookup": "^0.1.3",
@@ -24,6 +25,7 @@
         "next-themes": "^0.4.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-hook-form": "^7.55.0",
         "swr": "^2.3.3",
         "tailwind-merge": "^3.1.0",
         "zod": "^3.24.2",
