--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@fontsource-variable/open-sans": "^5.2.5",
         "@heroui/react": "^2.7.6-beta.2",
         "@hookform/resolvers": "^5.0.1",
+        "@supabase/ssr": "^0.6.1",
+        "@supabase/supabase-js": "^2.49.4",
         "axios": "^1.8.4",
         "clsx": "^2.1.1",
         "country-code-lookup": "^0.1.3",
@@ -41,6 +43,7 @@
         "eslint-config-next": "15.2.4",
         "eslint-config-prettier": "^10.1.1",
         "prettier": "3.5.3",
+        "supabase": "^2.20.5",
         "tailwindcss": "^4",
         "typescript": "^5"
     }
