--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
         "country-code-lookup": "^0.1.3",
         "embla-carousel": "^8.5.2",
         "embla-carousel-react": "^8.5.2",
-        "framer-motion": "^12.6.2",
         "lucide-react": "^0.486.0",
+        "motion": "^12.6.3",
         "next": "15.2.4",
         "next-themes": "^0.4.6",
         "react": "^19.0.0",
