feat: enhance media and dashboard components; add watchlist functionality and profile context; refactor types and API routes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
         "baseUrl": ".",
         "paths": {
             "@/app/*": ["src/app/*"],
+            "@/types/*": ["src/types/*"],
             "@/components/*": ["src/components/*"],
             "@/ui/*": ["src/components/ui/*"],
             "@/styles/*": ["src/styles/*"],
