--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
         ],
         "baseUrl": ".",
         "paths": {
+            "@/*": ["src/*"],
             "@/app/*": ["src/app/*"],
             "@/types/*": ["src/types/*"],
             "@/components/*": ["src/components/*"],
