--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ NEXT_PUBLIC_SUPABASE_URL=<your_supabase_project_url>
 NEXT_PUBLIC_SUPABASE_ANON_KEY=<your_supabase_anon_key>
 NEXT_PUBLIC_TMDB_API_URL=<https://api.themoviedb.org/3>
 NEXT_PUBLIC_TMDB_IMAGES_URL=<https://media.themoviedb.org/t/p>
-TMDB_API_TOKEN=<your_tmdb_api_token>
+NEXT_PUBLIC_TMDB_API_KEY=<your_NEXT_PUBLIC_TMDB_API_KEY>
+NEXT_PUBLIC_API_URL=<your_backend_url>
