--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@supabase/supabase-js": "^2.49.4",
         "axios": "^1.8.4",
         "clsx": "^2.1.1",
+        "countries-list": "^3.1.1",
         "country-code-lookup": "^0.1.3",
         "embla-carousel": "^8.5.2",
         "embla-carousel-react": "^8.5.2",
