--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     },
     "dependencies": {
         "@fontsource-variable/open-sans": "^5.2.5",
-        "@heroui/react": "^2.8.0-beta.2",
+        "@heroui/input-otp": "^2.1.27",
+        "@heroui/react": "^2.8.5",
+        "@heroui/system": "^2.4.23",
+        "@heroui/theme": "^2.4.23",
         "@hookform/resolvers": "^5.0.1",
         "@supabase/ssr": "^0.6.1",
         "@supabase/supabase-js": "^2.49.4",
@@ -26,8 +29,8 @@
         "motion": "^12.6.3",
         "next": "15.2.4",
         "next-themes": "^0.4.6",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
+        "react": "^19.2.0",
+        "react-dom": "^19.2.0",
         "react-hook-form": "^7.55.0",
         "swr": "^2.3.3",
         "tailwind-merge": "^3.1.0",
@@ -45,7 +48,7 @@
         "eslint-config-prettier": "^10.1.1",
         "prettier": "3.5.3",
         "supabase": "^2.20.5",
-        "tailwindcss": "^4.1.4",
+        "tailwindcss": "^4.1.14",
         "typescript": "^5"
     }
 }
